--- a/BattleofNeighbourhoods_Week1.ipynb
+++ b/BattleofNeighbourhoods_Week1.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "A restaurant is a business which prepares and serves food and drink to customers in return for money, either paid before the meal, after the meal, or with an open account. The City of New York is famous for its excelllent cuisine. It's food culture includes an array of international cuisines influenced by the city's immigrant history.\n",
     "\n",
-    "My client, Company A is a successful restaurant chain in Argentina that is looking to expand business into USA through New York City. \n",
+    "My client, Company A is a successful restaurant chain in Mexico that is looking to expand business into USA through New York City. \n",
     "\n",
     "So it is evident that to survive in such competitive market it is very important to startegically plan. Various factors need to be studied inorder to decide on the Location such as :\n",
     "\n",
@@ -72,7 +72,7 @@
    "source": [
     "To recommend the correct location, Company A has appointed me to lead the necessary Data analysis. The objective is to recommend to the management which neighborhood of Newyork city will be best choice to start a restaurant. The Management also expects to understand the rationale of the recommendations made.\n",
     "\n",
-    "This would interest anyone who wants to start a new restaurant in Newyork city."
+    "This would interest anyone who wants to start a new Mexican restaurant in Newyork city."
    ]
   }
  ],
