--- a/BattleofNeighbourhoods_Data.ipynb
+++ b/BattleofNeighbourhoods_Data.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "Argentinian resturants in each neighborhood of new york city.\n",
     "Data source : Fousquare API\n",
-    "By using this api we will get all the venues in each neighborhood. We can filter these venues to get only Argentinian resturants.\n"
+    "By using this api we will get all the venues in each neighborhood. We can filter these venues to get only Mexican resturants.\n"
    ]
   },
   {
